--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,10 @@ django-cors-headers==3.0.2
 django-heroku==0.3.1
 django-rest-auth==0.9.5
 django-rest-framework==0.1.0
+django-templated-mail==1.1.1
 djangorestframework==3.10.2
+djangorestframework-simplejwt==4.3.0
+djoser==2.0.1
 gunicorn==19.9.0
 idna==2.8
 isort==4.3.21
@@ -17,7 +20,9 @@ lazy-object-proxy==1.4.1
 mccabe==0.6.1
 oauthlib==3.0.2
 psycopg2==2.8.3
+PyJWT==1.7.1
 pylint==2.3.1
+python-dotenv==0.10.3
 python3-openid==3.1.0
 pytz==2019.1
 requests==2.22.0
